--- a/app/src/main/res/layout/activity_select_taste.xml
+++ b/app/src/main/res/layout/activity_select_taste.xml
@@ -7,21 +7,27 @@
     <include
         layout="@layout/comm_title"
         />
+    <include layout="@layout/title_info"/>
 
     <ListView
         android:id="@+id/lv_taste"
-        android:layout_weight="6"
+        android:layout_weight="8"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:scrollbars="none">
     </ListView>
     <Button
         android:layout_marginBottom="10dp"
-        android:layout_gravity="center"
         android:layout_weight="1"
-        android:text="确定"
-        android:textSize="20sp"
+        android:layout_marginTop="20dp"
         android:id="@+id/bt_ok_taste"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp" />
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:textColor="@color/white"
+        android:background="@drawable/em_button_login_bg"
+        android:layout_gravity="center_horizontal"
+        android:text="确定"
+        android:textSize="20sp" />
 </LinearLayout>
